--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,8 @@
   "framework": "nextjs",
   "build": {
     "env": {
-      "NEXT_PUBLIC_API_URL": "https://soccer-stats-predictor-sigma.vercel.app"
+      "NEXT_PUBLIC_API_URL": "https://soccer-stats-predictor-sigma.vercel.app",
+      "NEXT_PUBLIC_BACKEND_URL": ""
     }
   }
 }
